--- a/app/views/header.html
+++ b/app/views/header.html
@@ -54,7 +54,7 @@
 						Pangit
 						&nbsp;
 						<img src="images/serbisyo-icons/no-profile-picture.png" alt="user-image" class="nav-image" />
-						<i class="fa fa-angle-down fa-lg "></i>
+						<i class="fa fa-angle-down fa-lg"></i>
 					</a>
 					<ul class="dropdown-menu" aria-labelledby="menu">
 						<li ng-class="{'active': path == '/mydashboard'}">
@@ -193,5 +193,5 @@
 <!-- Go to top -->
 
 <div class="container-fluid go-to-top" ng-class="{'whiteframe-z1': goTo}" ng-mouseover="goTo = true" ng-mouseleave="goTo = false" ng-click="goToTop()">
-	<span class="glyphicon glyphicon-chevron-up"></span>
+	<i class="fa fa-angle-up fa-lg"></i>
 </div>
