converted search page to directives

--- a/app/views/dialogs/serviceAssetDialog.html
+++ b/app/views/dialogs/serviceAssetDialog.html
@@ -1,14 +1,14 @@
 <div class="serbisyo-modal" ng-style="{'display': showServiceAssetDialog ? 'block' : 'none'}">
-    <div class="serbisyo-modal-content border-radius-3 dialog-shadow-1" ng-style="{'width': viewportWidth > 767 ? '630px' : 'calc(100% - 30px)'}">
+    <div class="serbisyo-modal-content border-radius-3 dialog-shadow-1" ng-class="{'scale-down': !scaleDialog, 'scale-up': scaleDialog}" ng-style="{'width': viewportWidth > 680 ? '630px' : 'calc(100% - 30px)'}">
         <img ng-src="{{result.picture ? result.picture : result.thumbnail}}" ng-show="result.thumbnail" class="img-responsive border-radius-top-3" alt="{{result.title}}" style="width: 100%" />
         <img src="images/serbisyo-icons/service-package-default.png" ng-hide="result.thumbnail" class="img-responsive border-radius-top-3" alt="service asset default" style="width: 100%" />
         <img src="images/serbisyo-icons/ajax-loader-2.gif" ng-show="showImageLoading" class="img-responsive servicepackage-popup-image-loading" alt="Loading image" />
-        <div class="modal-body">
+        <div class="modal-body" style="padding-bottom: 0; margin-bottom: -5px">
             <strong>{{result.title}}</strong>
             <div class="clearfix"></div>
             <strong><small>{{result.companyName}}</small></strong>
             <hr />
-            <div ng-style="{'height': viewportWidth > 767 ? 'auto' : '200px', 'overflow': 'auto'}">
+            <div ng-style="{'height': viewportWidth > 767 ? 'auto' : '175px', 'overflow': 'auto'}">
                 <small class="pre-description">{{result.description}}</small>
             </div>
             <hr />
@@ -27,16 +27,18 @@
                 </strong>
             </small>
             <div class="clearfix"></div>
+            <hr />
         </div>
-        <hr />
         <div class="modal-footer">
             <button type="button" class="btn btn-warning btn-sm" ng-click="closeServiceAssetDialogBox()">
                 Cancel
             </button>
-            <button type="button" class="btn btn-primary btn-sm" ng-click="no()">
-                Ok
+            <button type="button" class="btn btn-primary btn-sm" ng-click="redirectToViewService(result)">
+                View Full Details
             </button>
         </div>
     </div>
+    <div class="clearfix"></div>
+    <br />
 </div>
 
