--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -242,12 +242,19 @@ a.btn-flat {
 	border-right: none;
 }
 
-.current-page {
+.num-hightlight {
 	background: #E5E5E5;
 	padding: 5px 7px;
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
+}
+
+.results-found > div {
+	padding: 5px;
+	width: 200px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /** border-radius **/
@@ -284,28 +291,43 @@ a.btn-flat {
 
 .serbisyo-modal-content {
 	/*width: 600px;*/
+	position: relative;
+	margin-top: 30px;
 	margin-left: 15px;
 	margin-right: 15px;
-	margin-top: 30px;
 	margin-left: auto;
 	margin-right: auto;
 	background: #fff;
-    -webkit-animation: serbisyo-modal-content-scale .3s forwards;
-    -moz-animation: serbisyo-modal-content-scale .3s forwards;
-    -o-animation: serbisyo-modal-content-scale .3s forwards;
-    animation: serbisyo-modal-content-scale .3s forwards;
-	-webkit-transform: scale(.1);
-	-ms-transform: scale(.1);
-	-o-transform: scale(.1);
-	transform: scale(.1);
+    /*-webkit-animation: serbisyo-modal-content-scale-up .3s forwards;
+    -moz-animation: serbisyo-modal-content-scale-up .3s forwards;
+    -o-animation: serbisyo-modal-content-scale-up .3s forwards;
+    animation: serbisyo-modal-content-scale-up .3s forwards;
+*/	-webkit-transform: scale(0);
+	-ms-transform: scale(0);
+	-o-transform: scale(0);
+	transform: scale(0);
 }
 
-@-webkit-keyframes serbisyo-modal-content-scale {
+.serbisyo-modal-content.scale-up {
+    -webkit-animation: serbisyo-modal-content-scale-up .3s forwards;
+    -moz-animation: serbisyo-modal-content-scale-up .3s forwards;
+    -o-animation: serbisyo-modal-content-scale-up .3s forwards;
+    animation: serbisyo-modal-content-scale-up .3s forwards;
+}
+
+.serbisyo-modal-content.scale-down {
+    -webkit-animation: serbisyo-modal-content-scale-down .05s forwards;
+    -moz-animation: serbisyo-modal-content-scale-down .05s forwards;
+    -o-animation: serbisyo-modal-content-scale-down .05s forwards;
+    animation: serbisyo-modal-content-scale-down .05s forwards;
+}
+
+@-webkit-keyframes serbisyo-modal-content-scale-up {
     0% {
-		-webkit-transform: scale(.1);
-		-ms-transform: scale(.1);
-		-o-transform: scale(.1);
-		transform: scale(.1);
+		-webkit-transform: scale(0);
+		-ms-transform: scale(0);
+		-o-transform: scale(0);
+		transform: scale(0);
     } 100% {
 		-webkit-transform: scale(1);
 		-ms-transform: scale(1);
@@ -314,12 +336,12 @@ a.btn-flat {
     }
 }
 
-@-moz-keyframes serbisyo-modal-content-scale {
+@-moz-keyframes serbisyo-modal-content-scale-up {
     0% {
-		-webkit-transform: scale(.1);
-		-ms-transform: scale(.1);
-		-o-transform: scale(.1);
-		transform: scale(.1);
+		-webkit-transform: scale(0);
+		-ms-transform: scale(0);
+		-o-transform: scale(0);
+		transform: scale(0);
     } 100% {
 		-webkit-transform: scale(1);
 		-ms-transform: scale(1);
@@ -328,12 +350,12 @@ a.btn-flat {
     }
 }
 
-@-0-keyframes serbisyo-modal-content-scale {
+@-0-keyframes serbisyo-modal-content-scale-up {
     0% {
-		-webkit-transform: scale(.1);
-		-ms-transform: scale(.1);
-		-o-transform: scale(.1);
-		transform: scale(.1);
+		-webkit-transform: scale(0);
+		-ms-transform: scale(0);
+		-o-transform: scale(0);
+		transform: scale(0);
     } 100% {
 		-webkit-transform: scale(1);
 		-ms-transform: scale(1);
@@ -342,12 +364,12 @@ a.btn-flat {
     }
 }
 
-@keyframes serbisyo-modal-content-scale {
+@keyframes serbisyo-modal-content-scale-up {
     0% {
-		-webkit-transform: scale(.1);
-		-ms-transform: scale(.1);
-		-o-transform: scale(.1);
-		transform: scale(.1);
+		-webkit-transform: scale(0);
+		-ms-transform: scale(0);
+		-o-transform: scale(0);
+		transform: scale(0);
     } 100% {
 		-webkit-transform: scale(1);
 		-ms-transform: scale(1);
@@ -356,7 +378,60 @@ a.btn-flat {
     }
 }
 
+@-webkit-keyframes serbisyo-modal-content-scale-down {
+    0% {
+		-webkit-transform: scale(1);
+		-ms-transform: scale(1);
+		-o-transform: scale(1);
+		transform: scale(1);
+    } 100% {
+		-webkit-transform: scale(0);
+		-ms-transform: scale(0);
+		-o-transform: scale(0);
+		transform: scale(0);
+    }
+}
 
+@-moz-keyframes serbisyo-modal-content-scale-down {
+    0% {
+		-webkit-transform: scale(1);
+		-ms-transform: scale(1);
+		-o-transform: scale(1);
+		transform: scale(1);
+    } 100% {
+		-webkit-transform: scale(0);
+		-ms-transform: scale(0);
+		-o-transform: scale(0);
+		transform: scale(0);    }
+}
+
+@-0-keyframes serbisyo-modal-content-scale-down {
+    0% {
+		-webkit-transform: scale(1);
+		-ms-transform: scale(1);
+		-o-transform: scale(1);
+		transform: scale(1);
+    } 100% {
+		-webkit-transform: scale(0);
+		-ms-transform: scale(0);
+		-o-transform: scale(0);
+		transform: scale(0);
+    }
+}
+
+@keyframes serbisyo-modal-content-scale-down {
+    0% {
+		-webkit-transform: scale(1);
+		-ms-transform: scale(1);
+		-o-transform: scale(1);
+		transform: scale(1);
+    } 100% {
+		-webkit-transform: scale(0);
+		-ms-transform: scale(0);
+		-o-transform: scale(0);
+		transform: scale(0);
+    }
+}
 
 .dialog-shadow-1 {
 	-webkit-box-shadow: 0 4px 23px 5px rgba(0, 0, 0, 0.2), 0 2px 6px rgba(0,0,0,0.15);
@@ -730,4 +805,13 @@ a.btn-flat {
 	}
 }
 
-/**   **/
+/**  home-page **/
+
+.home-page {
+	background: #fff;
+	position: relative;]
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
