--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,9 +2,17 @@
 
 <!-- Main Page -->
 
-<div class="container-fluid">
+<div class="container">
 	<div class="content-container whiteframe-z1">
 		<h1>z1</h1>
+		<div class="form-group form-group-sm">
+			<input type="search" class="form-control" placeholder="I'm looking for..." style="width: 300px;" ng-disabled />
+			<button type="submit" class="btn btn-primary btn-sm">
+				&nbsp;
+				<span class="glyphicon glyphicon-search"></span>
+				&nbsp;
+			</button>
+		</div>
 		<p>
 			<a href="#" class="btn-flat btn-default">Default</a>
 			<a href="#" class="btn-flat btn-primary">Primary</a>
