--- a/app/views/viewservice.html
+++ b/app/views/viewservice.html
@@ -15,7 +15,7 @@
 			<hr />
 			<div class="content-row">
 				<div class="thumbnail">
-					<img src="images/cfg_services/travelandbookingagent.jpg" class="img-responsive" alt="{{result.name}}" style="width: 100%" />
+					<img src="images/cfg_services/travelandbookingagent.jpg" class="img-responsive" alt="{{service.name}}" style="width: 100%" />
 				</div>
 			</div>
 		</div>
@@ -31,7 +31,7 @@
 		<div class="content-right hidden-xs">
 			<div class="content-row">
 				<div class="thumbnail">
-					<img src="images/cfg_services/travelandbookingagent.jpg" class="img-responsive" alt="{{result.name}}" style="width: 100%" />
+					<img src="images/cfg_services/travelandbookingagent.jpg" class="img-responsive" alt="{{service.name}}" style="width: 100%" />
 				</div>
 			</div>
 		</div>
@@ -44,7 +44,7 @@
 		<div class="content-right visible-xs">
 			<div class="content-row">
 				<div class="thumbnail">
-					<img ng-src="{{result.picture ? result.picture : 'images/serbisyo-icons/no-profile-picture.png'}}" class="img-responsive" alt="{{result.name}}" style="width: 100%" />
+					<img ng-src="{{service.picture ? service.picture : 'images/serbisyo-icons/no-profile-picture.png'}}" class="img-responsive" alt="{{service.name}}" style="width: 100%" />
 				</div>
 			</div>
 		</div>
